# roommate-cli

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
